--- a/404.html
+++ b/404.html
@@ -2,6 +2,8 @@
 layout: prompt
 title: 404 - Page Not Found
 ---
-<h1 class="mt-5">404</h1>
-<p class="lead">The requested page could not be found.</p>
-<p><a href="{{ '/' | relative_url }}">Go home</a></p>
+<div class="glass-card p-5 mt-5 text-center" style="border-radius: var(--card-radius);">
+    <h1 style="font-size: 5rem; font-weight: 900; background: var(--accent-gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">404</h1>
+    <p class="lead" style="color: var(--text-secondary);">The requested page could not be found.</p>
+    <a href="{{ '/' | relative_url }}" class="btn btn-primary mt-3"><i class="fas fa-home mr-2"></i>Go Home</a>
+</div>
