--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@ body_attr: >-
         {% for year in pubs_by_year %}
         {% assign num_papers = year.items | size %}
         <h2 class="pt-4" id="year-{{ year.name }}">{{ year.name }}</h2>
-        <div class="my-0 p-0 bg-white shadow-sm rounded-sm">
+        <div class="my-0 p-0 glass-card" style="border-radius: var(--card-radius); overflow: hidden;">
             {% for item in year.items %}
                 {% include widgets/publication_item.html item=item %}
             {% endfor %}
@@ -22,7 +22,7 @@ body_attr: >-
     </div>
 
     <div class="col-2 d-none d-lg-block">
-        <div id="navbar-year" class="nav nav-pills flex-column sticky-top" style="top: 80px">
+        <div id="navbar-year" class="nav nav-pills flex-column sticky-top glass-card" style="top: 80px; padding: 12px; border-radius: var(--card-radius);">
             {% for year in pubs_by_year %}
             <a class="nav-link d-block" href="#year-{{ year.name }}">{{ year.name }}</a>
             {% endfor %}
